--- a/README
+++ b/README
@@ -1,4 +1,28 @@
-" .vimrc, _vimrc
-" Load the first file named 'vimrc' found in runtimepath
-" @see http://vim.wikia.com/wiki/Version_Control_for_Vimfiles
-runtime vimrc
+                     {/ ． ．\}
+                     ( (oo)   )
+ +-------------oOOo---︶︶︶︶---oOOo-------------+
+                                      _  ___
+                                       \/ _/
+                                      _/ /ian__
+                                     /__/\ \/ /
+                                          \  /
+                                          /_/un
+
+
+
+                                    闲耘™(@hotoo)
+                             hotoo.cn[AT]gmail.com
+
+ +---------------------------------Oooo-----------+
+
+闲耘™'s Vim settings, plugins...
+
++- vimrc
+    |
+    +- sysrc.vim        针对系统的特殊设置，比如 Vimwiki 的项目目录。
+    |
+    +- vimrc            统一管理的 Vim 设置信息。
+    |
+    +- _vimrc           针对 Windows gvim 的配置文件，本质上
+                        是导入 vimrc，其他系统(.vimrc)也是如此，可以
+                        方便统一管理配置文件。
