--- a/README
+++ b/README
@@ -29,3 +29,5 @@
     +- vimrc            统一管理的 Vim 设置信息。
     |
     +- tmp              用来存储临时文件的目录，请手工创建。
+    |
+    +- mru-list.txt     MRU.vim 保存的列表问题，如果没有请手工创建。
