--- a/README
+++ b/README
@@ -30,4 +30,4 @@
     |
     +- tmp              用来存储临时文件的目录，请手工创建。
     |
-    +- mru-list.txt     MRU.vim 保存的列表问题，如果没有请手工创建。
+    +- _vim_mru_files   MRU.vim 保存的列表问题，如果没有请手工创建。
