--- a/README
+++ b/README
@@ -19,11 +19,10 @@
 
 +- vimrc
     |
-    +- _vimrc           针对 Windows gvim 的配置文件，本质上
-    |                   是导入 vimrc，其他系统(.vimrc)也是如此，可以
-    |                   方便统一管理配置文件。
+    +- _vimrc           针对 Windows gvim 的配置文件，本质上是导入 vimrc，
+    |                   其他系统(.vimrc)也是如此，可以方便统一管理配置文件。
     |
-    +- sysrc.vim        针对系统的特殊设置，比如 Vimwiki 的项目目录。
+    +- sysrc.vim        针对系统的特殊设置，比如 Vimwiki 项目的存储目录。
     |
     +- vimrc            统一管理的 Vim 设置信息。
     |
@@ -33,4 +32,4 @@
     |
     +- undodir          存储持久化撤销文件的目录，请手工创建。
     |
-    +- _vim_mru_files   MRU.vim 保存的列表问题，如果没有请手工创建。
+    +- _vim_mru_files   MRU.vim 保存的列表文件，如果没有请手工创建。
