--- a/README
+++ b/README
@@ -19,11 +19,11 @@
 
 +- vimrc
 |   |
-|   +- .vimrc               Unix-like 系统的配置文件，本质上是导入 vimrc
+|   +- .vimrc_example       Unix-like 系统的样本配置文件，本质上是导入 vimrc
 |   |
-|   +- _vimrc               针对 Windows gvim 的配置文件，同 .vimrc
+|   +- _vimrc_example       针对 Windows gvim 的样本配置文件，同 .vimrc
 |   |
-|   +- sysrc.vim            针对系统的特殊设置，比如 Vimwiki 项目的存储目录。
+|   +- sysrc_example.vim    针对系统的特殊设置，比如 Vimwiki 项目的存储目录。
 |   |
 |   +- vimrc                统一管理的 Vim 设置信息，目前主要支持 Mac & Windows。
 |   |
@@ -46,18 +46,18 @@ for Unix-like(Mac, Linux):
     $ mkdir .tmp .undodir
     $ touch .vim_mru_files
     $ git clone git@github.com:hotoo/vimrc.git .vim
-    $ cp .vim/.sysrc_example.vim ./sysrc.vim
+    $ cp .vim/.sysrc_sample.vim ./.sysrc.vim
     $ vi .sysrc.vim
-    $ cp .vim/.vimrc_example ./.vimrc
+    $ cp .vim/.vimrc_sample ./.vimrc
 
 for Windows:
     $ cd "C:\Program Files\Vim"
     $ mkdir tmp undodir
     $ touch _vim_mru_files
     $ git clone git@github.com:hotoo/vimrc.git vimfiles
-    $ cp vimfiles/sysrc_example.vim ./sysrc.vim
+    $ cp vimfiles/sysrc_sample.vim ./sysrc.vim
     $ vi vimfiles/sysrc.vim
-    $ cp vimfiles/_vimrc_example ./_vimrc
+    $ cp vimfiles/_vimrc_sample ./_vimrc
 
 上面的 .sysrc_example.vim 和 sysrc_example.vim 的内容参考对应的范例文件。
 for Windows 的 "C:\Program Files\Vim" 是你的 Vim 实际安装目录。
