--- a/README
+++ b/README
@@ -54,7 +54,7 @@ for Unix-like(Mac, Linux):
 for Windows:
     $ cd "C:\Program Files\Vim"
     $ mkdir tmp undodir
-    $ touch _vim_mru_files
+    $ copy NUL _vim_mru_files
     $ rmdir /s /q vimfiles
     $ git clone git@github.com:hotoo/vimrc.git vimfiles
     $ copy vimfiles\.sysrc_sample.vim sysrc.vim
@@ -63,10 +63,10 @@ for Windows:
     $ copy vimfiles\_vimrc_sample _vimrc
     $ copy vimfiles\addons\curl.exe C:\WINDOWS\system32
     $ copy vimfiles\addons\libeay32.dll C:\WINDOWS\system32
-    $ cp vimfiles/addons/gvimfullscreen.dll vim73
-    $ cp vimfiles/addons/vimtweak.dll vim73
-    $ cp vimfiles/addons/validate-css.bat C:\WINDOWS\system32
-    $ cp vimfiles/addons/validate-html.bat C:\WINDOWS\system32
+    $ copy vimfiles\addons\gvimfullscreen.dll vim73
+    $ copy vimfiles\addons\vimtweak.dll vim73
+    $ copy vimfiles\addons\validate-css.bat C:\WINDOWS\system32
+    $ copy vimfiles\addons\validate-html.bat C:\WINDOWS\system32
 
 *注意：*
 - 上面的 .sysrc_sample.vim 和 sysrc_sample.vim 的内容参考对应的范例文件。
